--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,19 +51,23 @@ nav>ul>li{
 .top-logo{
   font-weight: 800;
   font-size: 40px;
-  color: black;
+  font-family: cursive;
+  color: rgb(105 66 167);
+  padding-left: 90px;
 }
 .search-input-field{
   width: 40em;
   height: 40px;
-  border: 1px solid black;
+  border: 1px solid rgb(105 66 167);
   border-radius: 10px;
   padding-left: 10px;
+
 }
 
-.tooltip {
+.tooltip>a{
   position: relative;
   display: inline-block;
+  color: rgb(105 66 167);
 }
 
 .tooltip .tooltiptext {
@@ -91,9 +95,15 @@ nav>ul>li{
 /* Menu bar--- */
 .menu-items{
   display: flex;
+  max-width: 1100px;
   justify-content: space-evenly;
-  margin: 10px 20px;
+  margin: 10px auto;
   height: 30px;
+}
+.menu-items>li>a{
+  font-size: 17px;
+  font-weight: 100;
+  color: grey;
 }
 .menu-items>li>a:hover{
   color: rgb(106, 50, 196);
@@ -157,7 +167,7 @@ nav>ul>li{
 
 /* -----Footer---- */
 footer{
-  background-color: rgb(106, 50, 196);
+  background-color: rgb(46, 4, 72);
   color: white;
   display: flex;
   flex-direction: column;
