Added responsive design

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
 }
 a{
   text-decoration: none;
@@ -40,6 +41,7 @@ nav{
   align-items: center;
   padding: 10px 70px;
   border-bottom: 1px solid rgb(224, 224, 224);
+  width: 100%;
 }
 nav>ul{
   display: flex;
@@ -53,15 +55,19 @@ nav>ul>li{
   font-size: 40px;
   font-family: cursive;
   color: rgb(105 66 167);
-  padding-left: 90px;
+}
+.search{
+  padding: 0 20px;
+  width: 593px;
+  display: flex;
+  justify-content: center;
 }
 .search-input-field{
-  width: 40em;
+  width: 80%;
   height: 40px;
   border: 1px solid rgb(105 66 167);
   border-radius: 10px;
   padding-left: 10px;
-
 }
 
 .tooltip>a{
@@ -122,11 +128,34 @@ nav>ul>li{
 }
 .products>li{
   height: auto;
-  width: 400px;
   margin: 20px;
+  width: calc(33% - 40px);
 }
 .title{
   color: rgb(106, 50, 196);
+}
+/* ----products-slider---- */
+.container{
+  padding: 10px 90px;
+}
+.row-container {
+  display: flex;
+  gap: 2.2rem;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+  scroll-behavior: smooth;
+  position: relative;
+  padding: 1rem 0.6rem;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.row-container::-webkit-scrollbar {
+  display: none;
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 /* -----products-page---- */
 .products-home{
@@ -228,5 +257,47 @@ footer{
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+/* ----Responsive Design---- */
+@media (max-width: 768px) {
+  header{
+    height: 140px;
+  }
+  .search{
+    position: absolute;
+    top: 84px;
+    left: 0px;
+    background-color: white;
+    padding: 10px;
+    width: 100%;
+    z-index: 20;
+  }
+  h1{
+    text-align: center;
+  }
+
+  .container{
+    width: 100%;
+    padding: 0;
+  }
+  .container>h1, p{
+    text-align: center;
+  }
+  .menu-items{
+    display: none;
+  }
+  main>img{
+    position: relative;
+  }
+  .product {
+      width: calc(50% - 40px); /* 2 products per row */
+  }
+}
+
+@media (max-width: 480px) {
+  .product {
+      width: 100%; /* 1 product per row */
   }
 }
