--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -115,6 +115,9 @@ nav>ul>li{
   color: rgb(106, 50, 196);
   border-bottom: 2px solid rgb(106, 50, 196);
 }
+.container>h1{
+  font-size: 2em;
+}
 
 /* Home page */
 .main{
@@ -136,17 +139,17 @@ nav>ul>li{
 }
 /* ----products-slider---- */
 .container{
-  padding: 10px 90px;
+  padding: 10px;
 }
 .row-container {
   display: flex;
-  gap: 2.2rem;
+  /* gap: 2.2rem; */
   overflow-x: scroll;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
   white-space: nowrap;
   scroll-behavior: smooth;
   position: relative;
-  padding: 1rem 0.6rem;
+  /* padding: 1rem 0.6rem; */
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -264,6 +267,7 @@ footer{
 @media (max-width: 768px) {
   header{
     height: 140px;
+    position:sticky;
   }
   .search{
     position: absolute;
@@ -297,7 +301,29 @@ footer{
 }
 
 @media (max-width: 480px) {
+  nav{
+    padding: 10px;
+  }
+  .search-input-field{
+    width: 100%;
+  }
   .product {
       width: 100%; /* 1 product per row */
+  }
+  .products-home{
+    padding: 10px;
+  }
+  .container>h1{
+    font-size: 30px;
+  }
+  p{
+    font-size: 15px;
+  }
+  footer{
+    padding: 1em;
+    font-size: 10px;
+  }
+  .list>li>a{
+    font-size: 10px;
   }
 }
