added several components

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
   --background: #ffffff;
@@ -32,6 +33,7 @@ body {
   color: black;
   background: white;
   font-family: Arial, Helvetica, sans-serif;
+  padding-top: 75px;
 }
 /* Navigation bar */
 
@@ -42,6 +44,12 @@ nav{
   padding: 10px 70px;
   border-bottom: 1px solid rgb(224, 224, 224);
   width: 100%;
+  position: fixed;
+  top: 0;
+  height: 72px;
+  background-color: white;
+  z-index: 1000;
+  color: black;
 }
 nav>ul{
   display: flex;
@@ -54,7 +62,7 @@ nav>ul>li{
   font-weight: 800;
   font-size: 40px;
   font-family: cursive;
-  color: rgb(105 66 167);
+  color: rgb(51 122 177);
 }
 .search{
   padding: 0 20px;
@@ -65,7 +73,7 @@ nav>ul>li{
 .search-input-field{
   width: 80%;
   height: 40px;
-  border: 1px solid rgb(105 66 167);
+  border: 1px solid rgb(51 122 177);
   border-radius: 10px;
   padding-left: 10px;
 }
@@ -73,14 +81,14 @@ nav>ul>li{
 .tooltip>a{
   position: relative;
   display: inline-block;
-  color: rgb(105 66 167);
+  color: rgb(51 122 177);
 }
 
 .tooltip .tooltiptext {
   visibility: hidden;
   font-size: 20px;
   /* width: 100px; */
-  background-color: rgb(106, 50, 196);
+  background-color: rgb(51 122 177);
   color: #fff;
   text-align: center;
   border-radius: 6px;
@@ -88,12 +96,12 @@ nav>ul>li{
   /* Position the tooltip */
   position: absolute;
   z-index: 1;
-  top: 70%;
-  left: 50%;
+  top: 95%;
+  left: 30%;
   margin-left: -5px;
 }
 .tooltip>a:hover{
-  color: rgb(106, 50, 196);
+  color: rgb(51 122 177);
 }
 .tooltip:hover .tooltiptext {
   visibility: visible;
@@ -112,8 +120,8 @@ nav>ul>li{
   color: grey;
 }
 .menu-items>li>a:hover{
-  color: rgb(106, 50, 196);
-  border-bottom: 2px solid rgb(106, 50, 196);
+  color: rgb(51 122 177);
+  border-bottom: 2px solid rgb(51 122 177);
 }
 .container>h1{
   font-size: 2em;
@@ -125,6 +133,10 @@ nav>ul>li{
   justify-content: space-between;
   align-items: center;
 }
+.main>img{
+  width: 100%;
+  height: 70%;
+}
 .products{
   display: flex;
   flex-wrap: wrap;
@@ -135,7 +147,7 @@ nav>ul>li{
   width: calc(33% - 40px);
 }
 .title{
-  color: rgb(106, 50, 196);
+  color: rgb(51 122 177);
 }
 /* ----products-slider---- */
 .container{
@@ -162,22 +174,27 @@ nav>ul>li{
 }
 /* -----products-page---- */
 .products-home{
-  padding: 20px 90px;
+  padding: 20px 9%;
+}
+.products-home>div>h1{
+  padding: 50px 0 0 0;
 }
 .products-list{
   display: flex;
   flex-wrap: wrap;
-  padding: 10px;
-  justify-content: space-evenly;
+  padding: 10px 0 0 0;
+  margin-left: -10px;
+  justify-content: space-between;
 }
 .products-list>li{
-  margin: 10px;
-  border: 1px solid rgb(202, 202, 202);
+  margin: 10px 0 10px 10px;
   width: 300px;
-  border-radius: 10px;
+  border-radius: 2px;
 }
-.products-list>li>img{
+.products-list>li>a>img{
   border-radius: 10px 10px 0 0;
+  height: 300px;
+  width: 300px;
 }
 .title-home{
   font-size: 20px;
@@ -186,20 +203,177 @@ nav>ul>li{
 .item-text{
   margin: 10px;
 }
-.item-text>h4{
+.item-text>h3{
   color: rgb(119, 28, 28);
+  font-weight: 100;
+}
+.actual-price{
+  color: grey;
+  font-size: 16px;
+  font-weight: 100;
+  text-decoration: line-through;
+  margin-left: 5px;
+}
+.item-text>p{
+  font-size: 15px;
+  color: rgb(72, 72, 72);
 }
 .products-list>li:hover{
-  border: 1px solid rgb(106, 50, 196);
-  background-color: rgba(106, 50, 196, 0.103);
+  box-shadow: 0 0 10px 0px rgb(172, 172, 172);
+  transition: .2s ease;
+  a{
+    color: rgb(51 122 177);
+  }
+}
+.product-item{
+  display: flex;
+  padding: 20px 0;
+}
+.product-item>section>img{
+  height: 400px;
+  width: 400px;
+  background-color: rgb(225, 225, 225);
+}
+.single-product-details{
+  padding-left: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.top-details>p{
+  color: rgb(143, 143, 143);
+  font-size: 16px;
+  padding: 10px 0;
+}
+.top-details>h1{
+  font-size: 30px;
+}
+.top-details>h4{
+  color: rgb(51 122 177);
+  font-size: 15px;
+}
+.top-details>ul>li{
+  font-size: 15px;
+  margin: 10px 0;
+}
+.price{
+  color: black;
+  font-size: 30px;
+}
+.discount{
+  color: rgb(51 122 177);
+  font-size: 17px;
+}
+.hardcode-offers{
+  color: green;
+  font-size: 15px;
 }
 
+.cartbutton{
+  background-color: rgb(51 122 177);
+  border: none;
+  color: white;
+  margin-top: 20px;
+  padding: 10px 40px;
+  border-radius: 50px;
+  margin-bottom: 20px;
+  font-size: 20px;
+}
+.cartbutton:hover{
+  background-color: rgb(59 155 230);
+  cursor: pointer;
+}
+/* ----Cart page---- */
+.cart{
+  margin: 20px 7%;
+  display: flex;
+  justify-content: space-evenly;
 
+}
+.cart-list{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  margin: 20px 90px 20px 0;
+  padding: 10px;
+  height: 200px;
 
-
+}
+.cart-item-detials{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.cart-item-detials>div>h1:hover{
+  color: rgb(51 122 177);
+  text-decoration: underline;
+  cursor: pointer;
+}
+.operator{
+  border: none;
+  font-size: 20px;
+  padding: 0 5px;
+  color: white;
+  background-color: rgb(51 122 177);
+}
+.quantity-output{
+  font-size: 20px;
+  padding: 1px 20px;
+  background-color: rgb(232, 232, 232);
+}
+.item-total-amount{
+  display: 'flex';
+  flex-direction: column;
+  padding-left: 20%;
+}
+.item-details{
+  display: flex;
+}
+.item-details>img{
+  margin-right: 20px;
+  background-color: rgb(225, 225, 225);
+}
+.remove{
+  background-color: white;
+  border: none;
+  text-decoration: underline;
+  cursor: pointer;
+  color: rgb(51 122 177);
+  font-size: 15px;
+}
+.remove:hover{
+  text-decoration: none;
+}
+.total-pricing{
+ box-shadow: 0px 0px 10px 0px rgb(211, 211, 211);
+ padding: 10px 20px;
+ border-radius: 5px;
+ display: flex;
+ height: 500px;
+ flex-direction: column;
+ justify-content: space-between;
+}
+.item-total-amount{
+  display: flex;
+  flex-direction: column;
+  text-align: right;
+  justify-content: space-between;
+}
+.sub{
+  padding-top: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+.sub>h5{
+  color: rgb(51 122 177);
+}
+.item-total{
+  padding: 20px 0;
+  border-bottom: 1px solid grey;
+}
 /* -----Footer---- */
 footer{
-  background-color: rgb(46, 4, 72);
+  background-color: rgb(51 122 177);
   color: white;
   display: flex;
   flex-direction: column;
@@ -210,13 +384,14 @@ footer{
 .first-footer-section{
   display: flex;
   justify-content: space-between;
-  padding: 10px 50px;
+  padding: 10px 50px 20px 50px;
   text-align: left;
   border-bottom: 1px solid white;
   color: white;
 }
 .about-footer{
   margin-right: 20px;
+  margin-bottom: 20px;
   width: 100%;
 }
 .about-items{
@@ -229,6 +404,7 @@ footer{
 .service-footer{
   margin-right: 20px;
   width: 100%;
+  margin-bottom: 20px;
 }
 .cs-items{
   margin: 10px 0;
@@ -257,6 +433,40 @@ footer{
   padding: 10px 20px 10px 0;
 }
 
+/* ----Not-Found Error page---- */
+.error-page{
+  display: flex;
+  text-align: left;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.error404{
+  font-size: 100px;
+  color: rgb(51 122 177);
+}
+.details-error>h2{
+  color: rgb(214, 0, 0);
+  font-family:monospace;
+  margin-bottom: 10px;
+}
+/*----Error Page---- */
+.error505{
+  text-align: center;
+}
+/* ---successful checkout pge--- */
+.successpage{
+  text-align: center;
+  margin-bottom: 40px;
+}
+.successpageheading{
+  color: green;
+  padding-bottom: 10px;
+}
+.successpara{
+  color: grey;
+  padding-bottom: 10px;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
@@ -278,16 +488,13 @@ footer{
     width: 100%;
     z-index: 20;
   }
-  h1{
-    text-align: center;
-  }
 
   .container{
     width: 100%;
     padding: 0;
   }
   .container>h1, p{
-    text-align: center;
+    text-align: left;
   }
   .menu-items{
     display: none;
@@ -297,6 +504,14 @@ footer{
   }
   .product {
       width: calc(50% - 40px); /* 2 products per row */
+  }
+  .product-item{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+  }
+  .single-product-details>section>p{
+    text-align: left;
   }
 }
 
@@ -313,17 +528,28 @@ footer{
   .products-home{
     padding: 10px;
   }
-  .container>h1{
-    font-size: 30px;
-  }
-  p{
-    font-size: 15px;
-  }
   footer{
     padding: 1em;
-    font-size: 10px;
   }
-  .list>li>a{
-    font-size: 10px;
+  .product-item>section>img {
+    height: 100%;
+    width: 100%;
+}
+.first-footer-section {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+}
+  .bottom-footer-section{
+    padding: 0;
   }
+.brands{
+  display: flex;
+  flex-direction: column;
+}
+.tnc{
+  display: flex;
+  flex-direction: column;
+  margin: 10px 0;
+}
 }
