--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -345,6 +345,7 @@ nav>ul>li{
   cursor: pointer;
   color: rgb(51 122 177);
   font-size: 15px;
+  text-align: right;
 }
 .remove:hover{
   text-decoration: none;
@@ -507,7 +508,7 @@ footer{
     width: 100%;
     padding: 0;
   }
-  .container>h1, p{
+  .container>h1, .container>p{
     text-align: left;
   }
   .menu-items{
@@ -544,6 +545,11 @@ footer{
   .cart{
     display: flex;
     flex-direction: column;
+  }
+  .items{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
   }
 }
 
@@ -587,5 +593,27 @@ footer{
   display: flex;
   flex-direction: column;
   margin: 10px 0;
+}
+.items{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.cart-list{
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  width: 100%;
+}
+.item-details{
+  display: flex;
+  flex-direction: column;
+}
+.item-total-amount {
+  text-align: right;
+}
+.item-details>img{
+  height: 300px;
+  width: auto;
 }
 }
